# prefect-auth-proxy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-dev.yaml  docker-prod.yaml  lint.yaml
app/: cache.py  db.py  dependencies.py  main.py  models.py  utils.py
app/config/: __init__.py  base.py  dev.py  prod.py
app/routers/: auth.py  proxy.py  tenant.py  user.py
migrations/auth_proxy/: 0_20230728092551_init.py  1_20230728100123_add_user_model.py  2_20231019082215_add_is_admin_field.py
scripts/: create_user.py  populate.py  run_semgrep.sh
tests/: conftest.py  test_auth.py  test_user.py
